fix layout issue

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,26 +1,41 @@
- /* mobile approach */
-
  .grid-container {
      display: grid;
-     height: 100vh;
+     height: 100%;
      grid-template-columns: 100%;
-     grid-template-rows: auto;
+     grid-template-rows: 60px 50px 1fr;
      grid-template-areas:
          "header"
          "nav"
          "main";
  }
 
- .header {
+
+ header {
      grid-area: header;
  }
 
- .nav {
+ nav {
      grid-area: nav;
  }
 
- .main {
+ main {
      grid-area: main;
+     display: grid;
+ }
+
+
+ .half-size-charts,
+ .social-media-info,
+ .member-info,
+ .message-and-settings {
+     display: grid;
+     grid-gap: 2px;
+ }
+
+ .half-size-charts,
+ .member-info,
+ .message-and-settings {
+     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  }
 
  .widget-container-full,
@@ -31,57 +46,43 @@
 
  @media (min-width: 768px) {
      .grid-container {
-         grid-template-columns: 55px 1fr;
-         grid-template-areas:
-             "header header"
-             "nav main";
-     }
-
-     .main {
-         display: grid;
-         grid-template-columns: 50%;
-     }
-
-
-     .traffic,
-     .social-container {
-         grid-column: 1 / span 2;
-     }
-
-     .daily,
-     .members,
-     .message {
-         grid-column: 1 / span 1;
-     }
-
-     .mobile-users,
-     .activity,
-     .settings {
-         grid-column: 2 / span 1;
-     }
-
+         grid-template-rows: 70px 60px 1fr; 
+     } 
+     
      .widget-container-full {
-         width: 90vw;
+         width: 90vw; 
      }
 
      .widget-container-half {
          width: 45vw;
      }
-
-
-
-     /* nav {
-         flex-direction: column;
-         justify-content: flex-start;
-     } */
-
  }
 
+ @media (min-width: 1024px) {
+     header {
+         width: 100vw;
+     }
 
- /* @media (min-width: 1024px) {
      .grid-container {
+         grid-template-columns: 60px 1fr;
+         grid-template-rows: 60px 1fr;
          grid-template-areas:
              "header header"
              "nav main";
      }
- } */
+
+     nav {
+         flex-direction: column;
+         justify-content: flex-start;
+     }
+
+     nav img {
+         width: 36px;
+         height: 32px;
+         margin: 20px auto 15px;
+     }
+
+     .social-media-info {
+         grid-template-columns: repeat(3, 1fr);
+     }
+ }
